# gtestsample

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.devcontainer/: Dockerfile  Dockerfile.tmpl  devcontainer.json  devcontainer.tmpl.json
include/service/: messagequeue.hpp  sample.hpp  service.h
scripts/: gen_covr.sh
source/service/: CMakeLists.txt  main.cc  messagequeue.cc  sample.cc  unit.target.cc
source/test/: CMakeLists.txt  main.cc  test-case001.cc
